--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <div class="header-content">
-    <div class="logo"></div> 
-    <h1> My Personal Blog</h1>
+    <div class="logo"> 
+    <h1> My Personal Blog😊</h1>
+    <link rel="stylesheet" href="css/style.css">
      </div>
 
      <nav>
@@ -23,19 +24,19 @@
 </header>  
 <main>
 <aside class="sidebar">
-    <h2>Search</h2>
+    <h2>Search🫡</h2>
     <input type="text" placeholder="Search...">
-    <h2>Categories</h2>
+    <h2>Categories😎</h2>
     <ul>
         <li><a href="#">Tech</a></li>
         <li><a href="#">Lifestyle</a></li>
     </ul>
 
-<h2>Recent Posts</h2>
+<h2>Recent Posts👇</h2>
 <ul>
-    <li><a href="#">Blog Post 1</a></li>
-    <li><a href="#">Blog Post 2</a></li>
-    <li><a href="#">Blog Post 3</a></li>
+    <li><a href="#">How to adopt a cat 🐈</a></li>
+    <li><a href="#">A car or a duck 🚗</a></li>
+    <li><a href="#">Shoppings tips from a non shopper 👗</a></li>
 </ul>
 </aside>
 
