--- a/index.html
+++ b/index.html
@@ -1,63 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-<div class="header-content">
-    <div class="logo"> 
-    <h1> My Personal Blog😊</h1>
-    <link rel="stylesheet" href="css/style.css">
-     </div>
-
-     <nav>
-<ul>
-<li><a href ="index.html">Home</a> </li>
-<li><a href ="about.html">About</a> </li>
-<li><a href ="contact.html">Contact</a> </li>
-</ul>
-
-        
-     </nav>
+<title>𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 <header>
-
-</header>  
+<div class="header-content">
+<div class="logo">
+<h1>𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾</h1>
+</div>
+<nav>
+<ul>
+<li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+<li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+<li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+<li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
+</ul>
+</nav>
+</div>
+</header>
 <main>
 <aside class="sidebar">
-    <h2>Search🫡</h2>
-    <input type="text" placeholder="Search...">
-    <h2>Categories😎</h2>
-    <ul>
-        <li><a href="#">Tech</a></li>
-        <li><a href="#">Lifestyle</a></li>
-    </ul>
-
-<h2>Recent Posts👇</h2>
+    <h2>Search🐦‍⬛</h2>
+<input type="text" placeholder="Search...">
+<h2>Categories🐈‍⬛</h2>
 <ul>
-    <li><a href="#">How to adopt a cat 🐈</a></li>
-    <li><a href="#">A car or a duck 🚗</a></li>
-    <li><a href="#">Shoppings tips from a non shopper 👗</a></li>
+<li><a href="#">Fashion</a></li>
+<li><a href="#">Art</a></li>
+<li><a href="#">Makeup</a></li>
+</ul>
+<h2>Recent Posts🐺</h2>
+<ul>
+<li><a href="#">Monster high for newbies👾</a></li>
+<li><a href="#">My Favourite bands🎸</a></li>
+<li><a href="#">My Favourite shows📺</a></li>
 </ul>
 </aside>
-
 <section class="content">
 <article class="blog-post">
-    <h2>My Favourite shows of 2024 so far</h2>
-    <img src="images/FAJaYOjUcA0T2dR [MConverter.eu].jpg">
-    <p>Welcome to my mind (luv the sandman)😊</p>
-    <a href="post.html">Read More</a>
-
-
+<h2>The Sandman's Realm🖤</h2>
+<img src="images/FAJaYOjUcA0T2dR [MConverter.eu].jpg" alt="Description of image">
+<p>If you are reading this, you probably have a vague idea of who that handsome man in the picture is, but if u dont.</p>
+<a href="#">Continue reading🐈‍⬛</a>
+</article>
+<article class="blog-post">
+<h2>Lolirock, latest tea🎸</h2>
+<img src="images/lolirock.jpeg" alt="Description of image">
+<p>Lovers and haters of lolirock alike, what been happening with the show and will it ever come back.</p>
+<a href="#">Continue reading🐈‍⬛</a>
 </article>
 </section>
-
 </main>
+<footer>
+<div class="footer-content">
+<div class="social-media">
+<h2>My Social Media📱</h2>
+<ul>
+<li><a href="#">Tumblr</a></li>
+<li><a href="#">Tiktok</a></li>
+<li><a href="#">Instagram</a></li>
+</ul>
+</div>
+<div class="sitemap">
+    <h2>Sitemap</h2>
+    <ul>
+        <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+        <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+        <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+        <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
+    </ul>
+    </div>
+    <p>&copy; 2024 𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾. All rights reserved..</p>
+    </div>
+    </footer>
+    </body>
+    </html>
     
-    </div>
-    <div class="footer">
-        <p></p>
-    </div>
-</body>
-</html>
-
-
