--- a/post.html
+++ b/post.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My First Blog Post😁</title>
-<link rel="stylesheet" href="css/styles.css">
+<title>My First Blog Post🖤</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
 <div class="header-content">
 <div class="logo">
-<h1>Personal Blog╰(*°▽°*)╯</h1>
+<h1>𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾 </h1>
 </div>
 <nav>
 <ul>
-<li><a href="index.html">Home🏠</a></li>
-<li><a href="about.html">About🆎</a></li>
-<li><a href="post.html">Post📬</a></li>
-<li><a href="contact.html">Contact📞</a></li>
+    <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+    <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+    <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+    <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
 </ul>
 </nav>
 </div>
@@ -23,45 +23,44 @@
 <main>
 <div class="main-content">
 <article class="blog-post">
-<h2>Welcome to my post page 😁</h2>
-<h2>How to choose what to watch? 📺</h2>
-<img src="images/iron man 2.jpg">
-<p>Finding what to watch can easily get extremely complicated especially if you have alot of interests like myself. Hopefully this blog post will help guide you in choosing which shows to inverst your time in.⌚</p>
-<table>
-<tr>
-<th>18/06/2022</th>
-<th>Category</th>
-</tr>
-<tr>
-    <td>January 1, 2022</td>
-<td>Personal</td>
-</tr>
-</table>
-</article>
-</div>
-</main>
-<footer>
-<div class="footer-content">
-<div class="social-media">
-<h2>Follow Me</h2>
-<ul>
-<li><a href="#">Facebook</a></li>
-<li><a href="#">Twitter</a></li>
-<li><a href="#">Instagram</a></li>
-</ul>
-</div>
-<div class="sitemap">
-<h2>Sitemap</h2>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="post.html">Post</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</div>
-<p>&copy; 2024 M 2024 My Personal Blog. All rights reserved.😁</p>
-</div>
-</footer>
-</body>
-</html>
-
+<h2>The Sandman's Realm🖤</h2>
+<img src="images/FAJaYOjUcA0T2dR [MConverter.eu].jpg" alt="Description of image">
+<p>If you are reading this, you probably have a vague idea of who that handsome man in the picture is, but if you don’t, let me introduce you to Dream, the Sandman. Dream, also known as Morpheus, is one of the Endless, a group of powerful and timeless entities that embody various aspects of the universe in Neil Gaiman's critically acclaimed comic series, The Sandman. As the ruler of the Dreaming, the realm where all dreams take place, Dream is a complex character, embodying both compassion and cruelty, wisdom and folly. He weaves through the intricate tapestry of human and supernatural lives, shaping dreams, inspiring creativity, and sometimes casting nightmares. His ethereal presence, characterized by his pale skin, dark hair, and starry eyes, captures the essence of the mysterious and the sublime. Dream's journey through his realm and interactions with other characters reveal profound insights into the nature of existence, making him an unforgettable figure in the world of fantasy literature.</p>
+    <table>
+    <tr>
+    <th>Date Published:01/07/2024</th>
+    <th>Category: Fiction</th>
+    </tr>
+    <tr>
+    <td>August 1, 2024</td>
+    <td>Fun stuff🖤</td>
+    </tr>
+    </table>
+    </article>
+    </div>
+    </main>
+    <footer>
+    <div class="footer-content">
+    <div class="social-media">
+        <h2>My Social Media📱</h2>
+        <ul>
+        <li><a href="#">Tumblr</a></li>
+        <li><a href="#">Tiktok</a></li>
+        <li><a href="#">Instagram</a></li>
+        </ul>
+        </div>
+        <div class="sitemap">
+            <h2>Sitemap</h2>
+            <ul>
+                <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+                <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+                <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+                <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
+            </ul>
+            </div>
+            <p>&copy; 2024 𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾. All rights reserved..</p>
+            </div>
+            </footer>
+            </body>
+            </html>
+        
