--- a/about.html
+++ b/about.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About Me😁</title>
-<link rel="stylesheet" href="css/styles.css">
+<title>Get to know me🖤</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
 <div class="header-content">
 <div class="logo">
-    <h1>My Personal Blog🌸🐾</h1>
+<h1>𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾</h1>
 </div>
 <nav>
 <ul>
-<li><a href="index.html">Home🏠</a></li>
-<li><a href="about.html">About🆎</a></li>
-<li><a href="post.html">Post📬</a></li>
-<li><a href="contact.html">Contact📞</a></li>
+    <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+    <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+    <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+    <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
 </ul>
 </nav>
 </div>
@@ -23,35 +23,34 @@
 <main>
 <div class="main-content">
 <section class="about-section">
-<h2>About Me😁</h2>
-<img src="images/sunghoon.jpg">
-<p>My name is Elisa and welcome to my blog. My blog serves as a place for me to air our my thoughts and feelings on whatever gives me stress so there is a mix of content on here. Please enjoy 😊🌸</p>
-<p>I have always been surrounded by animals all my life so i am an avvid animal lover🐶🐹😺. I also occasionally dable in playing football for fun.⚽. I LUV LUV LUVVVVV KPOP ❤️❤️</p>
+    <h2>Get to know me🖤</h2>
+<p>Hello Ghouls, my name is Spectra Nightshade and i am an enjoyer of all things gothic, girly and cartoon related.</p>
+<p>I am a HUGE TV watcher and i love anyform of media be it animated or recorded that has a grippimg story and is able to make me feel emotions aside from sadness👾</p>
 </section>
 </div>
 </main>
 <footer>
-    <div class="footer-content">
-        <div class="social-media">
-        <h2>Follow Me😁</h2>
-        <ul>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
-        </ul>
-        </div>
-        <div class="sitemap">
+<div class="footer-content">
+<div class="social-media">
+    <h2>My Social Media📱</h2>
+    <ul>
+    <li><a href="#">Tumblr</a></li>
+    <li><a href="#">Tiktok</a></li>
+    <li><a href="#">Instagram</a></li>
+    </ul>
+    </div>
+    <div class="sitemap">
         <h2>Sitemap</h2>
         <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="post.html">Post</a></li>
-        <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+            <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+            <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+            <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
         </ul>
         </div>
-        <p>&copy; 2024 My Personal Blog(❁´◡`❁). All rights reserved❤️.</p>
-    </div>
-</footer>
-</body>
-</html>
-
+        <p>&copy; 2024 𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾. All rights reserved..</p>
+        </div>
+        </footer>
+        </body>
+        </html>
+        
