--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Contact Me📞</title>
-<link rel="stylesheet" href="css/styles.css">
+<title>Get in touch📲</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
 <div class="header-content">
 <div class="logo">
-<h1>My Personal Blog😁</h1>
+<h1>𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾</h1>
 </div>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="post.html">Post</a></li>
-<li><a href="contact.html">Contact</a></li>
+    <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+    <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+    <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+    <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
+
 </ul>
 </nav>
 </div>
 </header>
 <main>
-<div class="main-content">
-<section class="contact-section">
-<h2>Contact Me for any questions and inquieres 📞</h2>
-<form action="submit_form.php" method="post">
-<label for="name">Name:</label>
-<input type="text" id="name" name="name">
-<label for="email">Email:</label>
-<input type="email" id="email" name="email">
-<input type="submit" value="Submit">
-</form>
-</section>
-</div>
-</main>
-<footer>
-    <div class="footer-content">
+    <div class="main-content">
+        <section class="contact-section">
+        <h2>Get in touch with me🖤</h2>
+        <form action="submit_form.php" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
+        <input type="submit" value="Submit">
+        </form>
+        </section>
+        </div>
+        </main>
+        <footer>
+        <div class="footer-content">
         <div class="social-media">
-        <h2>Follow Me</h2>
-        <ul>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
-        </ul>
-        </div>
-        <div class="sitemap">
-        <h2>Sitemap</h2>
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="post.html">Post</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        </ul>
-        </div>
-        <p>&copy; 2024 My Personal Blog. All rights reserved.😁</p>
-    </div>
-</footer>
-</body>
-</html>
+            <h2>My Social Media📱</h2>
+            <ul>
+            <li><a href="#">Tumblr</a></li>
+            <li><a href="#">Tiktok</a></li>
+            <li><a href="#">Instagram</a></li>
+            </ul>
+            </div>
+            <div class="sitemap">
+                <h2>Sitemap</h2>
+                <ul>
+                    <li><a href="index.html">ℍ𝕠𝕞𝕖🖤</a></li>
+                    <li><a href="about.html">𝔸𝕓𝕠𝕦𝕥🖤</a></li>
+                    <li><a href="post.html">ℙ𝕠𝕤𝕥🖤</a></li>
+                    <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥🖤</a></li>
+                </ul>
+                </div>
+                <p>&copy; 2024 𝕄𝕠𝕟𝕤𝕥𝕖𝕣 𝕄𝕒𝕤𝕙 𝔻𝕚𝕒𝕣𝕚𝕖𝕤🐾. All rights reserved..</p>
+                </div>
+                </footer>
+                </body>
+                </html>
+                
